--- a/news.html
+++ b/news.html
@@ -69,7 +69,7 @@
             <div class="swiper-slide">
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
-                <img src="./img/image-news/pic1.jpg" alt="ODI">
+                <img src="./img/image-news/pic1.png" alt="ODI">
                 <h1> 羽化-英特梅迪亞鬼豔 </h1>
             </div>
     
@@ -77,7 +77,7 @@
             <div class="swiper-slide">
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
-                <img src="./img/image-news/pic2.jpg" alt="DS">
+                <img src="./img/image-news/pic2.png" alt="DS">
                 <h1> 攝影活動開跑中 </h1>
             </div>
         </div>
