header plus animation

--- a/news.html
+++ b/news.html
@@ -126,7 +126,7 @@
                 <img src="./img/image-news/list5.png" alt="">
                 <h3 class="even">活動</h3>
                 <p>----------活動快報-----------</p>
-                <span>一年一度的蟲季又來囉~想一起體驗大自然以及抓蟲點燈的樂趣?趕快來堡我們報名吧~~!</span>
+                <span>一年一度的蟲季又來囉~想一起體驗大自然以及抓蟲點燈的樂趣?趕快來找我們報名吧~~!</span>
             </li>
             <li>
                 <img src="./img/image-news/list6.png" alt="">
