--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Yuji+Boku&display=swap" rel="stylesheet">
+<!-- 預先載入 -->
+    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/main-left.png" as="image">
+    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/main.png" as="image">
+    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/main-right.png" as="image">
+
 </head>
 <body>
 <!-- 頂端黏著header -->
