--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/main-left.png" as="image">
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/main.png" as="image">
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/main-right.png" as="image">
+    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/product1.png" as="image">
+    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/product2.png" as="image">
+    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/product3.png" as="image">
+    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/product4.png" as="image">
+    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record1.png" as="image">
+    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record2.png" as="image">
+    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record3.png" as="image">
+    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record4.png" as="image">
+
 
 </head>
 <body>
