logo>index; bulletin/body overflow

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Yuji+Boku&display=swap" rel="stylesheet">
-<!-- 預先載入
+<!-- 預先載入 -->
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/main-left.png" as="image">
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/main.png" as="image">
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/main-right.png" as="image">
@@ -19,7 +19,7 @@
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record1.png" as="image">
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record2.png" as="image">
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record3.png" as="image">
-    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record4.png" as="image"> -->
+    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record4.png" as="image">
 
 
 </head>
@@ -36,7 +36,9 @@
             </div>        
         </div>
         <div class="header2">
-            <img src="./img/image-logo/white_border_logo.svg" alt="logo" class="white-logo">     
+            <a href="./index.html">
+                <img src="./img/image-logo/white_border_logo.svg" alt="logo" class="white-logo">
+            </a>     
             <ul>
                 <li><a href="./index.html">首頁</a></li>
                 <li><a href="./news.html">最新消息</a></li>
