--- a/news.html
+++ b/news.html
@@ -23,7 +23,9 @@
             </div>        
         </div>
         <div class="header2">
-            <img src="./img/image-logo/white_border_logo.svg" alt="logo" class="white-logo">   
+            <a href="./index.html">
+                <img src="./img/image-logo/white_border_logo.svg" alt="logo" class="white-logo">
+            </a>      
             <ul>
                 <li><a href="./index.html">首頁</a></li>
                 <li><a href="./news.html">最新消息</a></li>
