lab font size & hover

--- a/beetle-lab.html
+++ b/beetle-lab.html
@@ -85,7 +85,7 @@
                     <a href="#">
                         <h1>長頸鹿鋸齒鍬形蟲飼育紀錄</h1>
                         <h2>2024年12月9日</h2>
-                        <p>世界上最大的鍬形蟲-長頸鹿鋸齒鍬形蟲(Prosopocoilus giraffa)在市場上深受玩家們青睞，今天就要來分享這種蟲的繁殖方式、注意事項，.....
+                        <p>世界上最大的鍬形蟲-長頸鹿鋸齒鍬形蟲(Prosopocoilus giraffa)在市場上深受玩家們青睞，今天就要來分享這種蟲的繁殖方式、.....
                         </p>
                     </a>
                 </div>
@@ -107,7 +107,7 @@
                     <a href="#">
                         <h1>五角大兜飼育&繁殖紀錄</h1>
                         <h2>2024年9月29日</h2>
-                        <p>五角大兜帥氣的五隻角特別吸睛，但是到底要怎麼樣才能順利繁殖出來，投產時要放水苔還是竹葉?這裡就要來分享讓五角大兜蟲爆產的小秘....                        
+                        <p>五角大兜帥氣的五隻角特別吸睛，但是到底要怎麼樣才能順利繁殖出來，投產時要放水苔還是竹葉?這裡就要來分享讓五角大兜蟲爆....                        
                         </p>
                     </a>
                 </div>
@@ -118,7 +118,7 @@
                     <a href="#">
                         <h1>適合新手入門的幾種家門蟲</h1>
                         <h2>2024年7月3日</h2>
-                        <p>第一次養蟲到底該選什麼蟲?會不會很難養?我需不需要溫控呢?現在要來分享新手適合入門的幾種好生好養的家門蟲。第一種要介紹的是黑....
+                        <p>第一次養蟲到底該選什麼蟲?會不會很難養?我需不需要溫控呢?現在要來分享新手適合入門的幾種好生好養的家門蟲。第一種要介紹....
                         </p>
                     </a>
                 </div>
@@ -129,7 +129,7 @@
                     <a href="#">
                         <h1>哈里斯長角花金龜飼育紀錄</h1>
                         <h2>2024年6月9日</h2>
-                        <p>哈里斯長角花金龜，又被稱作大海龜金龜，是種很特別的中型金龜，尤其公蟲頭上那隻顯著的長角，很多玩家深深被他吸引著(筆者也是其中....
+                        <p>哈里斯長角花金龜，又被稱作大海龜金龜，是種很特別的中型金龜，尤其公蟲頭上那隻顯著的長角，很多玩家深深被他吸引著(筆者也....
                         </p>
                     </a>
                 </div>
