--- a/news.html
+++ b/news.html
@@ -140,7 +140,7 @@
                 <img src="./img/image-news/list7.png" alt="">
                 <h3 class="notice">公告</h3>
                 <p>再次宣導</p>
-                <span>請不要將手指伸入鍬形蟲大顎及南洋大兜的頭胸甲縫隙中，若發生意外請自行負責並賠償蟲隻損傷，謝謝您的合作與配合。</span>
+                <span>請不要將手指伸入鍬形蟲大顎及南洋大兜的頭胸甲縫隙中，若發生意外請自行負責並<br>賠償蟲隻損傷，<br>謝謝您的合作與配合。</span>
             </li>
             <li>
                 <img src="./img/image-news/list8.png" alt="">
@@ -152,7 +152,7 @@
                 <img src="./img/image-news/list9.png" alt="">
                 <h3 class="even">活動</h3>
                 <p>----------活動快報-----------</p>
-                <span>南投仁愛鄉產兩點赤鋸齒鍬形蟲贈送中，出示我們的Instagram追蹤畫面即可享有一對成蟲，送完為止。</span>
+                <span>南投仁愛鄉產<br>兩點赤鋸齒鍬形蟲贈送中，<br>出示我們的Instagram追蹤畫面即可享有一對成蟲，<br>送完為止。</span>
             </li>
         </ul>
     </div>
