--- a/news.html
+++ b/news.html
@@ -17,10 +17,10 @@
         <div class="header1">
             <p>Recording of Beetles</p>
             <div class="social-link">
-                <a href=""><i class="fa-brands fa-instagram fa-lg" ></i></a>
-                <a href=""><i class="fa-brands fa-line " ></i></a>
-                <a href=""><i class="fa-brands fa-facebook " ></i></a>        
-            </div>        
+                <a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-lg" ></i></a>
+                <a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line " ></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook " ></i></a>        
+            </div>       
         </div>
         <div class="header2">
             <a href="./index.html">
@@ -159,15 +159,15 @@
 
 
 <!-- footer -->
-    <div class="footer">
-        <p>Copyright 2024 © 甲蟲羽錄</p>
-        <img src="./img/image-logo/white_basic.svg" alt="logo">
-        <ul>
-            <li><a href=""><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-line fa-2xl"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
-        </ul>
-     </div>
+<div class="footer">
+    <p>Copyright 2024 © 甲蟲羽錄</p>
+    <img src="./img/image-logo/white_basic.svg" alt="logo">
+    <ul>
+        <li><a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
+        <li><a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line fa-2xl"></i></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
+    </ul>
+ </div>
 
 <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
