--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -16,10 +16,10 @@
         <div class="header1">
             <p>Recording of Beetles</p>
             <div class="social-link">
-                <a href="https://www.instagram.com/giraffa_beetle1001/"><i class="fa-brands fa-instagram fa-lg" ></i></a>
-                <a href="https://line.me/ti/p/061ly8VaI_"><i class="fa-brands fa-line " ></i></a>
-                <a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d"><i class="fa-brands fa-facebook " ></i></a>        
-            </div>              
+                <a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-lg" ></i></a>
+                <a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line " ></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook " ></i></a>        
+            </div>             
         </div>
         <div class="header2">
             <a href="./index.html">
@@ -66,14 +66,15 @@
 
             <label for="quantity"></label>
             <select name="quantity" id="quantity">
-                <option value="one">1</option>
+                <option value="zero">0</option>
+                <option value="one" selected>1</option >
                 <option value="two">2</option>
                 <option value="three">3</option>
             </select>
 
             <p>NT$ 2,999</p>
         </div>
-        <a href="">繼續選購</a>
+        <a href="./beetle-shop.html">繼續選購</a>
     </div>
     <div class="r-cart">
         <div class="how-to-ship">
@@ -97,15 +98,15 @@
 
 
 <!-- footer -->
-    <div class="footer">
-        <p>Copyright 2024 © 甲蟲羽錄</p>
-        <img src="./img/image-logo/white_basic.svg" alt="logo">
-        <ul>
-            <li><a href="https://www.instagram.com/giraffa_beetle1001/"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
-            <li><a href="https://line.me/ti/p/061ly8VaI_"><i class="fa-brands fa-line fa-2xl"></i></a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
-        </ul>
-     </div>
+<div class="footer">
+    <p>Copyright 2024 © 甲蟲羽錄</p>
+    <img src="./img/image-logo/white_basic.svg" alt="logo">
+    <ul>
+        <li><a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
+        <li><a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line fa-2xl"></i></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
+    </ul>
+ </div>
 </body>
 
 </html>
