視覺設計修改

--- a/beetle-lab.html
+++ b/beetle-lab.html
@@ -13,14 +13,14 @@
 <!-- 頂端黏著header -->
     <div class="wrapper">
 
-        <div class="header1">
+        <!-- <div class="header1">
             <p>Recording of Beetles</p>
             <div class="social-link">
                 <a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-lg" ></i></a>
                 <a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line " ></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook " ></i></a>        
             </div>       
-        </div>
+        </div> -->
         <div class="header2">
             <a href="./index.html">
                 <img src="./img/image-logo/white_border_logo.svg" alt="logo" class="white-logo">
@@ -34,7 +34,7 @@
             </ul>
             <div class="user-action">
                 <a href="./login.html">會員登入</a>
-                <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping" style="color: #000000;"></i> 購物車</a>    
+                <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> 購物車</a>    
             </div>
         </div>
     </div>
@@ -81,7 +81,7 @@
     <div class="main-content">
         <ul>
             <li>
-                <div>
+                <div class="record-box">
                     <a href="#">
                         <h1>長頸鹿鋸齒鍬形蟲飼育紀錄</h1>
                         <h2>2024年12月9日</h2>
@@ -92,7 +92,7 @@
                 <img src="./img/image-beetle-lab/article1.png" alt="">
           </li>
             <li>
-                <div>
+                <div class="record-box">
                     <a href="#">
                         <h1>產木選擇以及投產小技巧</h1>
                         <h2>2024年10月1日</h2>
@@ -103,33 +103,33 @@
                 <img src="./img/image-beetle-lab/article2.png" alt="">
           </li>
           <li>
-                <div>
+                <div class="record-box">
                     <a href="#">
                         <h1>五角大兜飼育&繁殖紀錄</h1>
                         <h2>2024年9月29日</h2>
-                        <p>五角大兜帥氣的五隻角特別吸睛，但是到底要怎麼樣才能順利繁殖出來，投產時要放水苔還是竹葉?這裡就要來分享讓五角大兜蟲爆....                        
+                        <p>五角大兜帥氣的五隻角特別吸睛，但是到底要怎麼樣才能順利繁殖出來，投產時要放水苔還是竹葉?這裡就要來分享讓五角大兜....                        
                         </p>
                     </a>
                 </div>
                 <img src="./img/image-beetle-lab/article3.png" alt="">
            </li>
           <li>
-                <div>
+                <div class="record-box">
                     <a href="#">
                         <h1>適合新手入門的幾種家門蟲</h1>
                         <h2>2024年7月3日</h2>
-                        <p>第一次養蟲到底該選什麼蟲?會不會很難養?我需不需要溫控呢?現在要來分享新手適合入門的幾種好生好養的家門蟲。第一種要介紹....
+                        <p>第一次養蟲到底該選什麼蟲?會不會很難養?我需不需要溫控呢?現在要來分享新手適合入門的幾種好生好養的家門蟲。第一種要....
                         </p>
                     </a>
                 </div>
                 <img src="./img/image-beetle-lab/article4.png" alt="">
           </li>
           <li>
-                <div>
+                <div class="record-box">
                     <a href="#">
                         <h1>哈里斯長角花金龜飼育紀錄</h1>
                         <h2>2024年6月9日</h2>
-                        <p>哈里斯長角花金龜，又被稱作大海龜金龜，是種很特別的中型金龜，尤其公蟲頭上那隻顯著的長角，很多玩家深深被他吸引著(筆者也....
+                        <p>哈里斯長角花金龜，又被稱作大海龜金龜，是種很特別的中型金龜，尤其公蟲頭上那隻顯著的長角，很多玩家深深被他吸引著....
                         </p>
                     </a>
                 </div>
