--- a/beetle-shop.html
+++ b/beetle-shop.html
@@ -13,14 +13,14 @@
 <!-- 頂端黏著header -->
 <div class="wrapper">
 
-    <div class="header1">
+    <!-- <div class="header1">
         <p>Recording of Beetles</p>
         <div class="social-link">
             <a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-lg" ></i></a>
             <a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line " ></i></a>
             <a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook " ></i></a>        
         </div>     
-    </div>
+    </div> -->
     <div class="header2">
         <a href="./index.html">
             <img src="./img/image-logo/white_border_logo.svg" alt="logo" class="white-logo">
@@ -34,7 +34,7 @@
         </ul>
         <div class="user-action">
             <a href="./login.html">會員登入</a>
-            <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping" style="color: #000000;"></i> 購物車</a>    
+            <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> 購物車</a>    
         </div>
     </div>
 </div>
@@ -77,7 +77,8 @@
         <ul>
             <li class="top-item">
                 <a href="#">
-                    <img src="./img/img-beetle-shop/product_top_1.png" alt="長戟大兜">
+                    <div class="img-box">
+                    <img src="./img/img-beetle-shop/product_top_1.png" alt="長戟大兜"></div>
                     <h3>長戟大兜<br> 
                         Dynastes hercules hercules</h3>
                     <p>NT$ 15000</p>
@@ -85,7 +86,8 @@
             </li>
             <li class="top-item">
                 <a href="#">
-                    <img src="./img/img-beetle-shop/product_top_2.png" alt="馬場黃金鬼鍬形蟲">
+                    <div class="img-box">
+                    <img src="./img/img-beetle-shop/product_top_2.png" alt="馬場黃金鬼鍬形蟲"></div>
                     <h3>馬場黃金鬼鍬形蟲<br>
                         Allotopus moellenkampi babai</h3>
                     <p>NT$ 1800</p>
@@ -93,7 +95,8 @@
             </li>
             <li>
                 <a href="#">
-                    <img src="./img/img-beetle-shop/product_main_1.png" alt="螃蟹鍬形蟲">
+                    <div class="img-box">
+                    <img src="./img/img-beetle-shop/product_main_1.png" alt="螃蟹鍬形蟲"></div>
                     <h3>螃蟹鍬形蟲 喀麥隆產<br> 
                         Homoderus meillyi  </h3>
                     <p>NT$ 1000</p>
@@ -101,7 +104,8 @@
             </li>
             <li>
                 <a href="#">
-                    <img src="./img/img-beetle-shop/product_main_2.png" alt="日本大鍬形蟲 肝川產">
+                    <div class="img-box">
+                    <img src="./img/img-beetle-shop/product_main_2.png" alt="日本大鍬形蟲 肝川產"></div>
                     <h3>日本大鍬形蟲 肝川產<br>
                         Dorcus hopei binodulosus</h3>
                     <p>NT$ 2500</p>
@@ -109,7 +113,8 @@
             </li>
             <li>
                 <a href="./beetle-product.html">
-                    <img src="./img/img-beetle-shop/product_main_3.png" alt="長頸鹿鋸齒鍬形蟲 西山保典亞種">
+                    <div class="img-box">
+                    <img src="./img/img-beetle-shop/product_main_3.png" alt="長頸鹿鋸齒鍬形蟲 西山保典亞種"></div>
                     <h3>長頸鹿鋸齒鍬形蟲<br>西山保典亞種<br> 
                         Prosopocoilus giraffa nishiyamai</h3>
                     <p>NT$ 2999</p>
@@ -117,7 +122,8 @@
             </li>
             <li>
                 <a href="#">
-                    <img src="./img/img-beetle-shop/product_main_4.png" alt="吐噶喇鋸鍬形蟲">
+                    <div class="img-box">
+                    <img src="./img/img-beetle-shop/product_main_4.png" alt="吐噶喇鋸鍬形蟲"></div>
                     <h3>吐噶喇鋸鍬形蟲<br> 
                         Prosopocoilus dissimilis </h3>
                     <p>NT$ 800</p>
@@ -125,7 +131,8 @@
             </li>
             <li>
                 <a href="#">
-                    <img src="./img/img-beetle-shop/product_main_5.png" alt="大王花金龜 GGA">
+                    <div class="img-box">
+                    <img src="./img/img-beetle-shop/product_main_5.png" alt="大王花金龜 GGA"></div>
                     <h3>大王花金龜 GGA<br>
                         Goliathus goliatus</h3>
                     <p>NT$ 1000</p>
@@ -133,7 +140,8 @@
             </li>
             <li>
                 <a href="#">
-                    <img src="./img/img-beetle-shop/product_main_6.png" alt="彩虹鍬形蟲(Red)">
+                    <div class="img-box">
+                    <img src="./img/img-beetle-shop/product_main_6.png" alt="彩虹鍬形蟲(Red)"></div>
                     <h3>彩虹鍬形蟲(Red)<br> 
                         Phalacrognathus muelleri</h3>
                     <p>NT$ 1000</p>
@@ -165,5 +173,6 @@
         </ul>
      </div>
 </body>
-
+<!-- 監聽滾動事件 -->
+<script src="./JavaScript/basic.js" ></script> 
 </html>
