--- a/index.html
+++ b/index.html
@@ -20,21 +20,19 @@
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record2.png" as="image">
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record3.png" as="image">
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record4.png" as="image">
-
-
 </head>
 <body>
 <!-- 頂端黏著header -->
-    <div class="wrapper">
-
-        <div class="header1">
+    <div id="wrapper" class="wrapper" style="opacity: 1;">
+    
+        <!-- <div class="header1">
             <p>Recording of Beetles</p>
             <div class="social-link">
                 <a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-lg" ></i></a>
                 <a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line " ></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook " ></i></a>        
             </div>       
-        </div>
+        </div> -->
         <div class="header2">
             <a href="./index.html">
                 <img src="./img/image-logo/white_border_logo.svg" alt="logo" class="white-logo">
@@ -48,7 +46,7 @@
             </ul>
             <div class="user-action">
                 <a href="./login.html">會員登入</a>
-                <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping" style="color: #000000;"></i> 購物車</a>    
+                <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> 購物車</a>    
             </div>
         </div>
     </div>
@@ -72,10 +70,10 @@
         <h2>珍稀品種 難得可貴</h2>
         <ul>
             <li><a href="#"><div class="trans"><img src="./img/image-index/product1.png" alt="DHB T-brand"></div><span>日本大鍬 T-brand血統</span></a></li>
-            <li><a href="#"><div class="trans"><img src="./img/image-index/product2.png" alt="AMB"></div><span>馬場黃金鬼鍬形蟲</span></a></li>
+            <li><a href="#"><div class="trans"><img src="./img/image-index/product2.png" alt="DHH"></div><span>DHH長戟大兜 河野血統</span></a></li>
         </ul>
         <ul>
-            <li><a href="#"><div class="trans"><img src="./img/image-index/product3.png" alt="DHH"></div><span>DHH長戟大兜 河野血統</span></a></li>
+            <li><a href="#"><div class="trans"><img src="./img/image-index/product3.png" alt="AMB"></div><span>馬場黃金鬼鍬形蟲</span></a></li>
             <li><a href="#"><div class="trans"><img src="./img/image-index/product4.png" alt="HM"></div><span>螃蟹鍬形蟲 喀麥隆產</span></a></li>
         </ul>
         
@@ -104,5 +102,6 @@
         </ul>
      </div>
 </body>
-
+<!-- 監聽滾動事件 -->
+<script src="./JavaScript/basic.js" ></script> 
 </html>
