--- a/news.html
+++ b/news.html
@@ -15,14 +15,14 @@
 <!-- 頂端黏著header -->
     <div class="wrapper">
 
-        <div class="header1">
+        <!-- <div class="header1">
             <p>Recording of Beetles</p>
             <div class="social-link">
                 <a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-lg" ></i></a>
                 <a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line " ></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook " ></i></a>        
             </div>       
-        </div>
+        </div> -->
         <div class="header2">
             <a href="./index.html">
                 <img src="./img/image-logo/white_border_logo.svg" alt="logo" class="white-logo">
@@ -36,7 +36,7 @@
             </ul>
             <div class="user-action">
                 <a href="./login.html">會員登入</a>
-                <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping" style="color: #000000;"></i> 購物車</a>    
+                <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> 購物車</a>    
             </div>
         </div>
     </div>
@@ -87,59 +87,50 @@
     
     <div class="news-list">
         <ul>
-            <li>
+            <li class="breeding-info">
                 <img src="./img/image-news/list1.png" alt="">
-                <h3 class="breeding-info">飼育情報</h3>
                 <p>五角大兜蟲大大大量發生中~~!!</p>
-                <span>第一輪幼蟲就破百，後續還有好幾個產房待開啟，究竟還會有多少幼蟲呢?現在特價販售中，趕快去商店瞧瞧!</span>
+                <span>第一輪幼蟲就破百，究竟還會有多少幼蟲呢?現在特價販售中，趕快去商店瞧瞧!</span>
             </li>
-            <li>
+            <li class="notice">
                 <img src="./img/image-news/list2.png" alt="">
-                <h3 class="notice">公告</h3>
                 <p>甲蟲羽錄年曆預購出爐啦~</p>
                 <span>讓甲蟲一起陪你開始新的一年!趕緊聯繫我們的小幫手吧~</span>
             </li>
-            <li>
+            <li class="even">
                 <img src="./img/image-news/list3.png" alt="">
-                <h3 class="even">活動</h3>
-                <p>----------活動快報-----------</p>
-                <span>凡是消費滿二百，就贈送一對白條綠花金龜成體，可能會出現不同顏色的後代喔! 數量有限送完為止。</span>
+                <p>活動快報-</p>
+                <span>凡是消費滿二百，就贈送一對白條綠花金龜成體 數量有限送完為止。</span>
             </li>
-            <li>
+            <li class="notice">
                 <img src="./img/image-news/list4.png" alt="">
-                <h3 class="notice">公告</h3>
                 <p>注意!!</p>
-                <span>感謝你的注意!!有請老闆製作標本的人客請記得來領取你的商品!不然老闆的防潮箱要爆炸啦!!!!</span>
+                <span>感謝你的注意!!製作標本的人客請記得來領取你的商品!不然老闆的防潮箱要爆炸啦!!!!</span>
             </li>
-            <li>
+            <li class="even">
                 <img src="./img/image-news/list5.png" alt="">
-                <h3 class="even">活動</h3>
-                <p>----------活動快報-----------</p>
+                <p>活動快報</p>
                 <span>一年一度的蟲季又來囉~想一起體驗大自然以及抓蟲點燈的樂趣?趕快來找我們報名吧~~!</span>
             </li>
-            <li>
+            <li class="breeding-info">
                 <img src="./img/image-news/list6.png" alt="">
-                <h3 class="breeding-info">飼育情報</h3>
                 <p>大家敲碗已久的螃蟹鍬到貨啦!!</p>
                 <span>來自非洲喀麥隆的珍奇異蟲又來了~數量有限售完為止唷。</span>
             </li>
-            <li>
+            <li class="notice">
                 <img src="./img/image-news/list7.png" alt="">
-                <h3 class="notice">公告</h3>
                 <p>再次宣導</p>
-                <span>請不要將手指伸入鍬形蟲大顎及南洋大兜的頭胸甲縫隙中，若發生意外請自行負責並<br>賠償蟲隻損傷，<br>謝謝您的合作與配合。</span>
+                <span>請不要將手指伸入鍬形蟲大顎及南洋大兜的頭胸甲縫隙中，若發生意外請自行負責。</span>
             </li>
-            <li>
+            <li class="breeding-info">
                 <img src="./img/image-news/list8.png" alt="">
-                <h3 class="breeding-info">飼育情報</h3>
                 <p>甲蟲回憶錄</p>
-                <span>大家耳熟能詳的獨角仙，每個夏天陪伴大家的回憶，但你想知道要如何養出大型個體嗎?趕快來看看甲蟲研究所吧!</span>
+                <span>大家耳熟能詳的獨角仙，但你想知道要如何養出大型個體嗎?趕快來看看甲蟲研究所吧!</span>
             </li>
-            <li>
+            <li class="even">
                 <img src="./img/image-news/list9.png" alt="">
-                <h3 class="even">活動</h3>
-                <p>----------活動快報-----------</p>
-                <span>南投仁愛鄉產<br>兩點赤鋸齒鍬形蟲贈送中，<br>出示我們的Instagram追蹤畫面即可享有一對成蟲，<br>送完為止。</span>
+                <p>活動快報</p>
+                <span>南投仁愛鄉產兩點赤鋸齒鍬形蟲贈送中，出示IG追蹤畫面即可享有一對成蟲，送完為止。</span>
             </li>
         </ul>
     </div>
@@ -158,5 +149,6 @@
 
 
 </body>
-
+<!-- 監聽滾動事件 -->
+<script src="./JavaScript/basic.js" ></script> 
 </html>
