--- a/order-completion.html
+++ b/order-completion.html
@@ -13,14 +13,14 @@
 <!-- 頂端黏著header -->
     <div class="wrapper">
 
-        <div class="header1">
+        <!-- <div class="header1">
             <p>Recording of Beetles</p>
             <div class="social-link">
                 <a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-lg" ></i></a>
                 <a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line " ></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook " ></i></a>        
             </div>            
-        </div>
+        </div> -->
         <div class="header2">
             <a href="./index.html">
                 <img src="./img/image-logo/white_border_logo.svg" alt="logo" class="white-logo">
@@ -34,7 +34,7 @@
             </ul>
             <div class="user-action">
                 <a href="./login.html">會員登入</a>
-                <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping" style="color: #000000;"></i> 購物車</a>    
+                <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> 購物車</a>    
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
         </ul>
     </div>
     <div class="box">
-        <h1>您的訂單<span>已完成</span> </h1>
+        <h1>您的訂單已完成 </h1>
         <h1>感謝您的購買</h1>
         <h1>祝您玩蟲愉快</h1>
         <p><span id="times">5</span>秒後將自動跳轉到首頁……&nbsp;如果您的瀏覽器沒有自動跳轉，請<a href="./index.html">點擊這裡</a>。</p>
@@ -77,9 +77,11 @@
     </ul>
  </div>
 </body>
+<!-- 監聽滾動事件 -->
+<script src="./JavaScript/basic.js" ></script> 
 
-
-<script>
+<!-- 返回首頁事件 -->
+<!-- <script> -->
 let countdown = 5
 
 function newtimes(){
