--- a/checkout.html
+++ b/checkout.html
@@ -13,14 +13,14 @@
 <!-- 頂端黏著header -->
     <div class="wrapper">
 
-        <div class="header1">
+        <!-- <div class="header1">
             <p>Recording of Beetles</p>
             <div class="social-link">
                 <a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-lg" ></i></a>
                 <a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line " ></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook " ></i></a>        
             </div>       
-        </div>
+        </div> -->
         <div class="header2">
             <a href="./index.html">
                 <img src="./img/image-logo/white_border_logo.svg" alt="logo" class="white-logo">
@@ -34,7 +34,7 @@
             </ul>
             <div class="user-action">
                 <a href="./login.html">會員登入</a>
-                <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping" style="color: #000000;"></i> 購物車</a>    
+                <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> 購物車</a>    
             </div>
         </div>
     </div>
@@ -228,5 +228,6 @@
         </ul>
      </div>
 </body>
-
+<!-- 監聽滾動事件 -->
+<script src="./JavaScript/basic.js" ></script> 
 </html>
