--- a/beetle-bulletin.html
+++ b/beetle-bulletin.html
@@ -17,20 +17,11 @@
 </head>
 <body>
 <!-- 頂端黏著header -->
-<div class="wrapper">
-
-    <!-- <div class="header1">
-        <p>Recording of Beetles</p>
-        <div class="social-link">
-            <a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-lg" ></i></a>
-            <a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line " ></i></a>
-            <a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook " ></i></a>        
-        </div>      
-    </div> -->
+<div id="wrapper" class="wrapper" style="opacity: 1;">
     <div class="header2">
-         <a href="./index.html">
-                <img src="./img/image-logo/white_border_logo.svg" alt="logo" class="white-logo">
-            </a>   
+        <a href="./index.html">
+            <img src="./img/image-logo/white_border_logo.svg" alt="logo" class="white-logo">
+        </a>     
         <ul>
             <li><a href="./index.html">首頁</a></li>
             <li><a href="./news.html">最新消息</a></li>
@@ -43,6 +34,26 @@
             <a href="./shopping-cart.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> 購物車</a>    
         </div>
     </div>
+</div>
+<!-- ---RWD 1100px--- -->
+<div class="header-rwd1">
+    <div class="hamburger">
+        <div class="bar bar1"></div>
+        <div class="bar bar2"></div>
+        <div class="bar bar3"></div>
+    </div>
+    <div id="rwd-box">
+        <ul class="rwd-list">
+            <li class="rwd-translate tl1"><a href="./index.html">首頁</a></li>
+            <li class="rwd-translate tl2"><a href="./news.html">最新消息</a></li>
+            <li class="rwd-translate tl3"><a href="./beetle-lab.html">甲蟲研究所</a></li>
+            <li class="rwd-translate tl4"><a href="./beetle-shop.html">翅鞘商店</a></li>
+            <li class="rwd-translate tl5"><a href="./beetle-bulletin.html">羽錄情報</a></li>
+            <li class="rwd-translate tl6"><a href="./login.html">會員登入</a></li>
+        </ul>            
+    </div>
+    <img src="./img/image-logo/rwd-white-logo.svg" alt="logo" class="rwd-logo">
+    <a href="./shopping-cart.html" class="rwd-cart"><i class="fa-sharp fa-solid fa-cart-shopping"></i></a>
 </div>
 <!-- 從這裡開始 -->
 <nav class="breadcrumb">
@@ -71,15 +82,16 @@
 
 
 <!-- footer -->
-    <div class="footer">
-        <p>Copyright 2024 © 甲蟲羽錄</p>
-        <img src="./img/image-logo/white_basic.svg" alt="logo">
-        <ul>
-            <li><a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
-            <li><a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line fa-2xl"></i></a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
-        </ul>
-     </div>
+<div class="footer">
+    <p>Copyright 2024 © 甲蟲羽錄</p>
+    <img src="./img/image-logo/white_basic.svg" alt="logo" class="footer-logo">
+    <ul>
+        <li><a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
+        <li><a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line fa-2xl"></i></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
+    </ul>
+    <img src="./img/image-logo/rwd-white-logo-footer.svg" alt="logo" class="footer-logo-rwd">
+    </div>
 </body>
 <!-- 監聽滾動事件 -->
 <script src="./JavaScript/basic.js" ></script> 
