--- a/index.html
+++ b/index.html
@@ -112,12 +112,13 @@
     <!-- footer -->
         <div class="footer">
         <p>Copyright 2024 © 甲蟲羽錄</p>
-        <img src="./img/image-logo/white_basic.svg" alt="logo">
+        <img src="./img/image-logo/white_basic.svg" alt="logo" class="footer-logo">
         <ul>
             <li><a href="https://www.instagram.com/giraffa_beetle1001/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
             <li><a href="https://line.me/ti/p/061ly8VaI_" target="_blank"><i class="fa-brands fa-line fa-2xl"></i></a></li>
             <li><a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
         </ul>
+        <img src="./img/image-logo/rwd-white-logo-footer.svg" alt="logo" class="footer-logo-rwd">
         </div>
  </body>
 <!-- 監聽滾動事件 -->
