新增 RWD選單進出場

--- a/index.html
+++ b/index.html
@@ -41,29 +41,28 @@
             </div>
         </div>
     </div>
-<!-- ---RWD 1100px--- -->
-    <div class="header-rwd1">
-        <div class="hamburger">
-            <div class="bar bar1"></div>
-            <div class="bar bar2"></div>
-            <div class="bar bar3"></div>
-        </div>
-        <div id="rwd-box">
-            <ul class="rwd-list">
-                <li class="rwd-translate tl1"><a href="./index.html">首頁</a></li>
-                <li class="rwd-translate tl2"><a href="./news.html">最新消息</a></li>
-                <li class="rwd-translate tl3"><a href="./beetle-lab.html">甲蟲研究所</a></li>
-                <li class="rwd-translate tl4"><a href="./beetle-shop.html">翅鞘商店</a></li>
-                <li class="rwd-translate tl5"><a href="./beetle-bulletin.html">羽錄情報</a></li>
-                <li class="rwd-translate tl6"><a href="./login.html">會員登入</a></li>
-            </ul>            
-        </div>
+<!-- ---RWD--- -->
+<div id="black"></div>  <!--覆蓋頁面-->
+<div class="header-rwd1">
+    <div class="hamburger">
+        <div class="bar bar1"></div>
+        <div class="bar bar2"></div>
+        <div class="bar bar3"></div>
+    </div>        
+
+    <div class="rwd-translate tl1"><a href="./index.html">首頁</a></div>
+    <div class="rwd-translate tl2"><a href="./news.html">最新消息</a></div>
+    <div class="rwd-translate tl3"><a href="./beetle-lab.html">甲蟲研究所</a></div>
+    <div class="rwd-translate tl4"><a href="./beetle-shop.html">翅鞘商店</a></div>
+    <div class="rwd-translate tl5"><a href="./beetle-bulletin.html">羽錄情報</a></div>
+    <div class="rwd-translate tl6"><a href="./login.html">會員登入</a></div>     
+    
+    
+    <a href="./index.html">            
         <img src="./img/image-logo/rwd-white-logo.svg" alt="logo" class="rwd-logo">
-        <a href="./shopping-cart.html" class="rwd-cart"><i class="fa-sharp fa-solid fa-cart-shopping"></i></a>
-    </div>
-
-
-
+    </a>
+    <a href="./shopping-cart.html" class="rwd-cart"><i class="fa-sharp fa-solid fa-cart-shopping"></i></a>
+</div>
 <!-- 首頁第一部分 -->   
         <div class="main-title">
             <div class="title-left">
