--- a/beetle-shop.html
+++ b/beetle-shop.html
@@ -60,8 +60,12 @@
     </ol>
 </nav>
 
+<button id="filter"><i class="fa-solid fa-filter"></i>&nbsp;&nbsp;&nbsp;&nbsp;商品分類</button>
+
 <form class="search">
-    <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+    <button type="submit">
+        <i class="fa-solid fa-magnifying-glass"></i>
+    </button>
     <input type="search" placeholder=" 搜尋">
     <select name="order" id="order">
         <option value="basic" hidden>排列方式:預設</option>
@@ -163,6 +167,83 @@
         </ul>
     </div>
 
+<!-- RWD商品目錄 -->
+    <ul class="rwd-product">
+        <li>
+            <a href="#" class="rwd-link">
+                <div class="rwd-box">
+                <img src="./img/img-beetle-shop/rwd_1.png" alt="長戟大兜"></div>
+                <h3>長戟大兜<br> 
+                    Dynastes hercules hercules</h3>
+                <p>NT$ 15000</p>
+            </a>
+        </li>
+        <li>
+            <a href="#" class="rwd-link">
+                <div class="rwd-box">
+                <img src="./img/img-beetle-shop/rwd_2.png" alt="馬場黃金鬼鍬形蟲"></div>
+                <h3>馬場黃金鬼鍬形蟲<br>
+                    Allotopus moellenkampi babai</h3>
+                <p>NT$ 1800</p>
+            </a>
+        </li>
+        <li>
+            <a href="#" class="rwd-link">
+                <div class="rwd-box">
+                <img src="./img/img-beetle-shop/rwd_3.png" alt="螃蟹鍬形蟲"></div>
+                <h3>螃蟹鍬形蟲<br>喀麥隆產<br> 
+                    Homoderus meillyi  </h3>
+                <p>NT$ 1000</p>
+            </a>
+        </li>
+        <li>
+            <a href="#" class="rwd-link">
+                <div class="rwd-box">
+                <img src="./img/img-beetle-shop/rwd_4.png" alt="日本大鍬形蟲 肝川產"></div>
+                <h3>日本大鍬形蟲<br>肝川產<br>
+                    Dorcus hopei binodulosus</h3>
+                <p>NT$ 2500</p>
+            </a>
+        </li>
+        <li>
+            <a href="./beetle-product.html" class="rwd-link">
+                <div class="rwd-box">
+                <img src="./img/img-beetle-shop/rwd_5.png" alt="長頸鹿鋸齒鍬形蟲 西山保典亞種"></div>
+                <h3>長頸鹿鋸齒鍬形蟲<br>西山保典亞種<br> 
+                    Prosopocoilus giraffa nishiyamai</h3>
+                <p>NT$ 2999</p>
+            </a>
+        </li>
+        <li>
+            <a href="#" class="rwd-link">
+                <div class="rwd-box">
+                <img src="./img/img-beetle-shop/rwd_6.png" alt="吐噶喇鋸鍬形蟲"></div>
+                <h3>吐噶喇鋸鍬形蟲<br> 
+                    Prosopocoilus dissimilis </h3>
+                <p>NT$ 800</p>
+            </a>
+        </li>
+        <li>
+            <a href="#" class="rwd-link">
+                <div class="rwd-box">
+                <img src="./img/img-beetle-shop/rwd_7.png" alt="大王花金龜 GGA"></div>
+                <h3>大王花金龜 GGA<br>
+                    Goliathus goliatus</h3>
+                <p>NT$ 1000</p>
+            </a>
+        </li>
+        <li>
+            <a href="#" class="rwd-link">
+                <div class="rwd-box">
+                <img src="./img/img-beetle-shop/rwd_8.png" alt="彩虹鍬形蟲(Red)"></div>
+                <h3>彩虹鍬形蟲(Red)<br> 
+                    Phalacrognathus muelleri</h3>
+                <p>NT$ 1000</p>
+            </a>
+        </li>
+    </ul>
+    
+    <!-- 底部按鈕 -->
  </div>
  <nav class="page-button">
     <ul>
@@ -189,4 +270,5 @@
 </body>
 <!-- 監聽滾動事件 -->
 <script src="./JavaScript/basic.js" ></script> 
+<script src="./JavaScript/beetle-shop.js"></script>
 </html>
