--- a/beetle-shop.html
+++ b/beetle-shop.html
@@ -63,10 +63,10 @@
 <button id="filter"><i class="fa-solid fa-filter"></i>&nbsp;&nbsp;&nbsp;&nbsp;商品分類</button>
 
 <form class="search">
-    <button type="submit">
+    <button type="submit" id="searchBtn" disabled>
         <i class="fa-solid fa-magnifying-glass"></i>
     </button>
-    <input type="search" placeholder=" 搜尋">
+    <input type="search" placeholder=" 搜尋" id="productName">
     <select name="order" id="order">
         <option value="basic" hidden>排列方式:預設</option>
         <option value="high_to_low">價格高到低</option>
@@ -92,7 +92,7 @@
     </div>
     <div class="main-product">
         <ul>
-            <li class="top-item">
+            <li class="top-item" data-name="長戟大兜Dynastes hercules hercules">
                 <a href="#">
                     <div class="img-box">
                     <img src="./img/img-beetle-shop/product_top_1.png" alt="長戟大兜"></div>
@@ -101,7 +101,7 @@
                     <p>NT$ 15000</p>
                 </a>
             </li>
-            <li class="top-item">
+            <li class="top-item" data-name="馬場黃金鬼鍬形蟲Allotopus moellenkampi babai">
                 <a href="#">
                     <div class="img-box">
                     <img src="./img/img-beetle-shop/product_top_2.png" alt="馬場黃金鬼鍬形蟲"></div>
@@ -110,7 +110,7 @@
                     <p>NT$ 1800</p>
                 </a>
             </li>
-            <li>
+            <li data-name="螃蟹鍬形蟲喀麥隆產Homoderus meillyi">
                 <a href="#">
                     <div class="img-box">
                     <img src="./img/img-beetle-shop/product_main_1.png" alt="螃蟹鍬形蟲"></div>
@@ -119,7 +119,7 @@
                     <p>NT$ 1000</p>
                 </a>
             </li>
-            <li>
+            <li data-name="日本大鍬形蟲肝川產Dorcus hopei binodulosus">
                 <a href="#">
                     <div class="img-box">
                     <img src="./img/img-beetle-shop/product_main_2.png" alt="日本大鍬形蟲 肝川產"></div>
@@ -128,7 +128,7 @@
                     <p>NT$ 2500</p>
                 </a>
             </li>
-            <li>
+            <li data-name="長頸鹿鋸齒鍬形蟲西山保典亞種Prosopocoilus giraffa nishiyamai">
                 <a href="./beetle-product.html">
                     <div class="img-box">
                     <img src="./img/img-beetle-shop/product_main_3.png" alt="長頸鹿鋸齒鍬形蟲 西山保典亞種"></div>
@@ -137,7 +137,7 @@
                     <p>NT$ 2999</p>
                 </a>
             </li>
-            <li>
+            <li data-name="吐噶喇鋸鍬形蟲Prosopocoilus dissimilis">
                 <a href="#">
                     <div class="img-box">
                     <img src="./img/img-beetle-shop/product_main_4.png" alt="吐噶喇鋸鍬形蟲"></div>
@@ -146,7 +146,7 @@
                     <p>NT$ 800</p>
                 </a>
             </li>
-            <li>
+            <li data-name="大王花金龜 GGAGoliathus goliatus">
                 <a href="#">
                     <div class="img-box">
                     <img src="./img/img-beetle-shop/product_main_5.png" alt="大王花金龜 GGA"></div>
@@ -155,7 +155,7 @@
                     <p>NT$ 1000</p>
                 </a>
             </li>
-            <li>
+            <li data-name="彩虹鍬形蟲(Red)Phalacrognathus muelleri">
                 <a href="#">
                     <div class="img-box">
                     <img src="./img/img-beetle-shop/product_main_6.png" alt="彩虹鍬形蟲(Red)"></div>
@@ -169,7 +169,7 @@
 
 <!-- RWD商品目錄 -->
     <ul class="rwd-product">
-        <li>
+        <li data-name="長戟大兜Dynastes hercules hercules">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_1.png" alt="長戟大兜"></div>
@@ -178,7 +178,7 @@
                 <p>NT$ 15000</p>
             </a>
         </li>
-        <li>
+        <li data-name="馬場黃金鬼鍬形蟲Allotopus moellenkampi babai">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_2.png" alt="馬場黃金鬼鍬形蟲"></div>
@@ -187,7 +187,7 @@
                 <p>NT$ 1800</p>
             </a>
         </li>
-        <li>
+        <li data-name="螃蟹鍬形蟲喀麥隆產Homoderus meillyi">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_3.png" alt="螃蟹鍬形蟲"></div>
@@ -196,7 +196,7 @@
                 <p>NT$ 1000</p>
             </a>
         </li>
-        <li>
+        <li data-name="日本大鍬形蟲肝川產Dorcus hopei binodulosus">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_4.png" alt="日本大鍬形蟲 肝川產"></div>
@@ -205,7 +205,7 @@
                 <p>NT$ 2500</p>
             </a>
         </li>
-        <li>
+        <li data-name="長頸鹿鋸齒鍬形蟲西山保典亞種Prosopocoilus giraffa nishiyamai">
             <a href="./beetle-product.html" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_5.png" alt="長頸鹿鋸齒鍬形蟲 西山保典亞種"></div>
@@ -214,7 +214,7 @@
                 <p>NT$ 2999</p>
             </a>
         </li>
-        <li>
+        <li data-name="吐噶喇鋸鍬形蟲Prosopocoilus dissimilis">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_6.png" alt="吐噶喇鋸鍬形蟲"></div>
@@ -223,7 +223,7 @@
                 <p>NT$ 800</p>
             </a>
         </li>
-        <li>
+        <li data-name="大王花金龜 GGAGoliathus goliatus">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_7.png" alt="大王花金龜 GGA"></div>
@@ -232,7 +232,7 @@
                 <p>NT$ 1000</p>
             </a>
         </li>
-        <li>
+        <li data-name="彩虹鍬形蟲(Red)Phalacrognathus muelleri)">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_8.png" alt="彩虹鍬形蟲(Red)"></div>
@@ -269,6 +269,7 @@
     </div>
 </body>
 <!-- 監聽滾動事件 -->
+ <script src="./JavaScript/jquery-3.7.1.js"></script>
 <script src="./JavaScript/basic.js" ></script> 
 <script src="./JavaScript/beetle-shop.js"></script>
 </html>
